<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/messageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title"
                    android:textColor="@color/black"
                    android:textFontWeight="100"
                    android:textSize="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Message"
                    android:textColor="@color/dark_gray"
                    android:textFontWeight="100"
                    android:textSize="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/likeBTN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/teal_200"
                        android:layout_alignParentEnd="true"
                        android:text="Like"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/likesTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#FF6666"
                        android:textFontWeight="100"
                        android:textSize="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="5dp"/>

                    <TextView
                        android:id="@+id/usernameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="username"
                        android:textColor="@color/dark_gray"
                        android:textFontWeight="100"
                        android:textSize="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>




            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>